[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "molcvp"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
molcv = "molcv:cli"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "molcv._molcv"
manifest-path = "rust/Cargo.toml"
